# computus

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
computus/: __init__.py  chronology.py  cli.py  roman.py
